[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-python-sdk"
version = "0.1.0"
description = "Python SDK for Helios"
requires-python = ">=3.10"
dependencies = [
    "betterproto[compiler]>=1.2.5",
]

[tool.setuptools.packages.find]
where = ["src"]
