[project]
name = "helios-python-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason", email = "jasonkwok475@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "protobuf>=7.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helios_python_sdk"]