[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-python-sdk"
version = "0.1.0"
description = "Python SDK for Helios"
requires-python = ">=3.10"
dependencies = [
    "betterproto2-compiler>=0.9.0",
    "betterproto2[all]>=0.9.1",
    "websockets>=15.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["helios", "generated*"]
